--- a/app/views/rants/index.html.erb
+++ b/app/views/rants/index.html.erb
@@ -2,6 +2,6 @@
 <div id="maincontent">
   <h1>Grants</h1>
   <div class="col-md-12">
-    <%= render partial: 'grants', locals: { grants: @grants } %>
+    <%= render partial: 'rants', locals: { rants: @rants } %>
   </div>
 </div>
