--- a/app/views/rants/new.html.erb
+++ b/app/views/rants/new.html.erb
@@ -1,9 +1,9 @@
 <div id="maincontent">
   <h1>New Grant</h1>
   <div class="col-md-12">
-    <%= render 'form', grant: @grant %>
+    <%= render 'form', rant: @rant %>
   </div>
   <div class="col-md-12"><br/></div>
-  <div class="col-md-12"><%= link_to 'Back', grants_path %></div>
+  <div class="col-md-12"><%= link_to 'Back', rants_path %></div>
   <div class="col-md-12"><br/></div>
 </div>
