--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,41 +1,40 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
   <% if @product.present? %>
-    <h1>Product <%= link_to @product.id, product_path(@product) %> Components</h1>
+    <h1>Components of <%= link_to @product.identifier, product_path(@product) %> Product</h1>
+    <form name="filter" method="get" action="<%= product_components_path(@product) %>">
   <% else %>
     <h1>Components</h1>
+    <form name="filter" method="get" action="<%= products_path %>">
   <% end %>
-  <b>
-    <div class="col-md-10">
-      <div class="col-md-1">ID</div>
-      <div class="col-md-6"><div>Identifier</div><div>Name</div></div>
-      <div class="col-md-1">FileSet</div>
-      <div class="col-md-2">Monograph</div>
-      <div class="col-md-1">Products</div>
-    </div>
-    <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
-    <div class="col-md-12"><hr/></div>
-  </b>
+    <b>
+      <div class="col-md-12"><hr/></div>
+      <div class="col-md-10">
+        <div class="col-md-1">
+          <div>ID</div>
+        </div>
+        <div class="col-md-8">
+          <% size = 24 %>
+          <div class="col-md-2">Identifier</div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
+          <div class="col-md-2">Name</div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div>
+        </div>
+        <div class="col-md-2"><div>Noid</div><div><input type="text" name="noid_like" value="<%= params[:noid_like] %>" size="<%= size / 2 %>" aria-label="noid_like"></div></div>
+        <div class="col-md-1"><div>Products</div><div><button name="submit" type="submit" value="filter">Filter</button></div></div>
+      </div>
+      <div class="col-md-2"><div><%= link_to 'New Component', new_component_path %></div><div>&nbsp;</div></div>
+      <div class="col-md-12"><hr/></div>
+    </b>
+  </form>
+
   <% @components.each do |component| %>
-    <%
-      entity = Sighrax.factory(component.noid)
-      monograph_id = 0
-      file_set_id = 0
-      if entity.is_a?(Sighrax::Monograph)
-        monograph = entity
-        monograph_id = entity.noid
-      else
-        file_set = entity
-        file_set_id = entity.noid
-        monograph = file_set.parent
-        monograph_id = monograph.noid
-      end
-    %>
     <div class="col-md-10">
       <div class="col-md-1"><%= component.id %></div>
-      <div class="col-md-6"><div><%= component.identifier %></div><div><%= component.name %></div>&nbsp;</div>
-      <div class="col-md-1">&nbsp;<%= link_to_if file_set.present?, file_set_id, hyrax_file_set_path(file_set_id) %></div>
-      <div class="col-md-2">&nbsp;<%= link_to_if monograph.present?, monograph_id, hyrax_monograph_path(monograph_id) %></div>
+      <div class="col-md-8"><div><%= component.identifier %></div><div><%= component.name %></div>&nbsp;</div>
+      <% if Sighrax.factory(component.noid).is_a?(Sighrax::Monograph) %>
+        <div class="col-md-2">&nbsp;<%= link_to component.noid, hyrax_monograph_path(component.noid) %></div>
+      <% else %>
+        <div class="col-md-2">&nbsp;<%= link_to component.noid, hyrax_file_set_path(component.noid) %></div>
+      <% end %>
       <div class="col-md-1">&nbsp;<%= link_to component.products.count, component_products_path(component) %></div>
     </div>
     <div class="col-md-2">
@@ -44,5 +43,5 @@
       <div class="col-md-4"><%= link_to_if component.destroy?, 'Destroy', component, method: :delete, data: { confirm: 'Are you sure?' } %></div>
     </div>
   <% end %>
-  <div class="col-md-12">&nbsp<%= paginate @components %></div>
+  <div class="col-md-12"><%= paginate @components %>&nbsp;</div>
 </div>
