--- a/app/views/fulcrum/_components.html.erb
+++ b/app/views/fulcrum/_components.html.erb
@@ -1,7 +1,4 @@
-<%
-  components = Component.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], noid_like: params[:noid_like]).order(identifier: :asc).page(params[:page])
-  size = 12
-%>
+<% components = Component.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], noid_like: params[:noid_like]).order(identifier: :asc).page(params[:page]) %>
 <h1>Components</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:components) %>">
   <table class="table table-striped" summary="Components List">
@@ -11,17 +8,24 @@
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
         <% end %>
       </th>
-      <th><label for="identifier_like">Identifier</label></th>
-      <th><label for="name_like">Name</label></th>
-      <th><label for="noid_like">Noid</label></th>
-      <th>Products</th>
-    </tr>
-    <tr>
-      <td><button name="submit" type="submit" value="filter">Filter</button></td>
-      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
-      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></td>
-      <td><input type="text" name="noid_like" value="<%= params[:noid_like] %>" size="<%= size %>" aria-label="noid_like"></td>
-      <td></td>
+      <th>
+        <% size = 24 %>
+        <div class="col-md-12">
+          <div class="col-md-2"><label for="identifier_like">Identifier</label></div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-2"><label for="name_like">Name</label></div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div></div>
+        </div>
+      </th>
+      <th>
+        <div><label for="noid_like">Noid</label></div>
+        <div><input type="text" name="noid_like" value="<%= params[:noid_like] %>" size="<%= size / 2 %>" aria-label="noid_like"></div>
+      </th>
+      <th>
+        <div>Products</div>
+        <div>&nbsp;</div>
+        <div><button name="submit" type="submit" value="filter">Filter</button></div>
+      </th>
     </tr>
     <% components.each do |component| %>
       <tr>
@@ -29,8 +33,10 @@
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
-        <td><%= component.identifier %></td>
-        <td><%= component.name %></td>
+        <td>
+          <div><%= component.identifier %></div>
+          <div><%= component.name %></div>
+        </td>
         <td>
           <%
             entity = Sighrax.factory(component.noid)
