--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -1,37 +1,46 @@
-<%
-  institutions = Institution.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], entity_id_like: params[:entity_id_like]).order(identifier: :asc).page(params[:page])
-  size = 12
-%>
+<% institutions = Institution.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], entity_id_like: params[:entity_id_like]).order(identifier: :asc).page(params[:page]) %>
 <h1>Institutions</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:institutions) %>">
   <table class="table table-striped" summary="Institution List">
     <tr>
-      <th><%= link_to(new_institution_path) do %>
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
-        <% end %>
+      <th>
+          <%= link_to(new_institution_path) do %>
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
+          <% end %>
       </th>
-      <th><label for="identifier_like">Identifier</label></th>
-      <th><label for="name_like">Name</label></th>
-      <th><label for="entity_id_like">Entity ID</label></th>
-      <th>Products</th>
-    </tr>
-    <tr>
-      <td><button name="submit" type="submit" value="filter">Filter</button></td>
-      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
-      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= 2 * size %>" aria-label="name_like"></td>
-      <td><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= 3 * size %>" aria-label="entity_id_like"></td>
-      <td></td>
+      <th>
+        <% size = 24 %>
+        <div class="col-md-12">
+          <div class="col-md-2"><label for="identifier_like">Identifier</label></div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-2"><label for="name_like">Name</label></div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div></div>
+        </div>
+        <div class="col-md-12">
+          <div class="col-md-2"><label for="entity_id_like">Entity ID</label></div><div class="col-md-10"><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= size %>" aria-label="entity_id_like"></div></div>
+        </div>
+        <div></div>
+        <div></div>
+      </th>
+      <th>
+        <div>Products</div>
+        <div>&nbsp;</div>
+        <div><button name="submit" type="submit" value="filter">Filter</button></div>
+      </th>
     </tr>
     <% institutions.each do |institution| %>
       <tr>
-        <td><%= link_to(institution_path(institution)) do %>
+        <td>
+          <%= link_to(institution_path(institution)) do %>
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
-        <td><%= institution.identifier %></td>
-        <td><%= institution.name %></td>
-        <td><%= institution.entity_id %></td>
-        <td><%= link_to institution.products.count, institution_products_path(institution) %></td>
+        <td>
+          <div><%= institution.identifier %></div>
+          <div><%= institution.name %>&nbsp;</div>
+          <div><%= institution.entity_id %>&nbsp;</div>
+        </td>
+        <td><%= institution.products.count %></td>
       </tr>
     <% end %>
   </table>
