--- a/app/views/fulcrum/_tokens.html.erb
+++ b/app/views/fulcrum/_tokens.html.erb
@@ -1,3 +1,4 @@
+<% size = 24 %>
 <h1>Token</h1>
 <table class="table table-striped" summary="Token">
   <tr>
@@ -7,18 +8,28 @@
                   data: { confirm: "Generate new token?" },
                   class: "btn btn-default" %>
     </th>
-    <th><%= text_field(:user, :token, size: 120, value: current_user.token, disabled: true) %></th>
+    <th><%= text_field(:user, :token, size: size * 4, value: current_user.token, disabled: true) %></th>
   </tr>
 </table>
-<% users = User.order(email: :asc).page(params[:page]) %>
+<% users = User.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], email_like: params[:email_like]).order(email: :asc).page(params[:page]) %>
 <h2>Tokenize</h2>
-<table class="table table-striped" summary="Tokenize List">
+<form name="filter" method="get" action="<%= fulcrum_partials_path(:tokens) %>">
+  <table class="table table-striped" summary="Tokenize List">
   <tr>
     <th></th>
-    <th>eMail</th>
+    <th><label for="identifier_like">Identifier</label></th>
+    <th><label for="name_like">Name</label></th>
+    <th><label for="email_like">eMail</label></th>
     <th>PIN</th>
   </tr>
-
+  <tr>
+    <% size = 24 %>
+    <td><button name="submit" type="submit" value="filter">Filter</button></td>
+    <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
+    <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></td>
+    <td><input type="text" name="email_like" value="<%= params[:email_like] %>" size="<%= size %>" aria-label="email_like"></td>
+    <td></td>
+  </tr>
   <% users.each do |user| %>
     <tr>
       <td>
@@ -28,8 +39,11 @@
                     class: "btn btn-default" %>
       </td>
       <td><%= user.email %></td>
+      <td><%= user.display_name %></td>
+      <td><%= user.email %></td>
       <td><%= user.encrypted_password %></td>
     </tr>
   <% end %>
 </table>
+</form>
 <%= paginate users %>
