--- a/app/views/fulcrum/_users.html.erb
+++ b/app/views/fulcrum/_users.html.erb
@@ -1,7 +1,4 @@
-<%
-  users = User.filter(identifier_like: params[:identifier_like], name_like: params[:name_like]).order(email: :asc).page(params[:page])
-  size = 24
-%>
+<% users = User.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], email_like: params[:email_like]).order(email: :asc).page(params[:page]) %>
 <h1>Users</h1>
 <form name="filter" method="get" action="<%= fulcrum_partials_path(:users) %>">
   <table class="table table-striped" summary="User List">
@@ -17,10 +14,11 @@
       <th>Roles</th>
     </tr>
     <tr>
+      <% size = 24 %>
       <td><button name="submit" type="submit" value="filter">Filter</button></td>
       <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
       <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></td>
-      <td></td>
+      <td><input type="text" name="email_like" value="<%= params[:email_like] %>" size="<%= size %>" aria-label="email_like"></td>
       <td></td>
     </tr>
     <% users.each do |user| %>
