--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,42 +1,53 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
   <% if @component.present? %>
-    <h1>Component <%= link_to @component.id, component_path(@component) %> Products</h1>
-  <% elsif @individual.present? %>
-    <h1>Individual <%= link_to @individual.id, individual_path(@individual) %> Products</h1>
-  <% elsif @institution.present? %>
-    <h1>Institution <%= link_to @institution.id, institution_path(@institution) %> Products</h1>
-  <% else %>
+    <h1>Products of <%= link_to @component.identifier, component_path(@component) %> Component</h1>
+    <form name="filter" method="get" action="<%= component_products_path(@component) %>">
+<!--    <form name="filter" method="get" action="<%#= products_path %>">-->
+<% elsif @individual.present? %>
+    <h1>Products of <%= link_to @individual.identifier, individual_path(@individual) %> Individual</h1>
+<!--    <form name="filter" method="get" action="<%#= individual_products_path(@individual)%>">-->
+    <form name="filter" method="get" action="<%= products_path %>">
+<% elsif @institution.present? %>
+    <h1>Products of <%= link_to @institution.identifier, institution_path(@institution) %> Institution</h1>
+<!--    <form name="filter" method="get" action="<%#= institution_products_path(@institution) %>">-->
+    <form name="filter" method="get" action="<%= products_path %>">
+<% else %>
     <h1>Products</h1>
-  <% end %>
-  <form name="filter" method="get" action="<%= products_path %>">
-  <b>
-    <div class="col-md-8">
-      <div class="col-md-2">ID</div>
-      <div class="col-md-5">Identifier</div>
-      <div class="col-md-5">Name</div>
-    </div>
-    <div class="col-md-2">
-      <div class="col-md-12">Components</div>
-    </div>
-    <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
-  </b>
-  <div class="col-md-8">
-    <% size = 24 %>
-    <div class="col-md-2"><button name="submit" type="submit" value="filter">Filter</button></div>
-    <div class="col-md-5"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
-    <div class="col-md-5"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div>
-  </div>
-  <div class="col-md-4">&nbsp;</div>
-  <div class="col-md-4">&nbsp;</div>
+    <form name="filter" method="get" action="<%= products_path %>">
+<% end %>
+    <b>
+      <div class="col-md-12"><hr/></div>
+      <div class="col-md-10">
+        <div class="col-md-1">
+          <div>ID</div>
+        </div>
+        <div class="col-md-8">
+          <% size = 24 %>
+          <div class="col-md-2">Identifier</div><div class="col-md-10"><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></div>
+          <div class="col-md-2">Name</div><div class="col-md-10"><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></div>
+          <div class="col-md-2">Purchase</div><div class="col-md-10"><input type="text" name="purchase_like" value="<%= params[:purchase_like] %>" size="<%= size %>" aria-label="purchase_like"></div>
+        </div>
+        <div class="col-md-3">
+          <div>Components</div>
+          <div>&nbsp;</div>
+          <div><button name="submit" type="submit" value="filter">Filter</button></div>
+        </div>
+      </div>
+      <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
+      <div class="col-md-12"><hr/></div>
+    </b>
+  </form>
+
   <% @products.each do |product| %>
-    <div class="col-md-8">
-      <div class="col-md-2"><%= product.id %></div>
-      <div class="col-md-5"><%= product.identifier %></div>
-      <div class="col-md-5"><%= product.name %></div>
-    </div>
-    <div class="col-md-2">
-      <div class="col-md-12"><%= link_to product.components.count, product_components_path(product) %></div>
+    <div class="col-md-10">
+      <div class="col-md-1"><%= product.id %></div>
+      <div class="col-md-8">
+        <div><%= product.identifier %></div>
+        <div><%= product.name %></div>
+        <div><%= link_to product.purchase, product.purchase %>&nbsp;</div>
+      </div>
+      <div class="col-md-2"><%= link_to product.components.count, product_components_path(product) %></div>
     </div>
     <div class="col-md-2">
       <div class="col-md-4"><%= link_to 'Show', product %></div>
@@ -44,6 +55,6 @@
       <div class="col-md-4"><%= link_to_if product.destroy?, 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
     </div>
   <% end %>
-  </form>
-  <div class="col-md-12">&nbsp<%= paginate @products %></div>
+
+  <div class="col-md-12"><%= paginate @products %>&nbsp;</div>
 </div>
