HELIO-2473, HELIO-2474 search box changes * Change search box in navigation bar to search Publisher's works (not within the monograph) * Add FileSet Search to Resource Tab and change FileSet labels to use Resources * When interacting with resources/file_sets, focus the window on the resources

--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -369,12 +369,12 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
         }).addTo(reader);
         <% end %>
 
-        // Media
+        // Resources
         <% if @monograph_presenter.assets? %>
         cozy.control.widget.button({
           region: 'top.toolbar.left',
-          template: '<button class="button--sm media" data-toggle="button" aria-label="Media">Media</button>',
-          onClick: function() { window.location = "<%= "#{main_app.monograph_catalog_url(@presenter.monograph_id) + '#media'}" %>"; }
+          template: '<button class="button--sm media" data-toggle="button" aria-label="Resources">Resources</button>',
+          onClick: function() { window.location = "<%= "#{main_app.monograph_catalog_url(@presenter.monograph_id) + '#resources'}" %>"; }
         }).addTo(reader);
         <% end %>
 
