--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -277,6 +277,10 @@ $heb-black-80: #342f2e;
     background-color: #fafafa;
   }
 
+  .search-form.panel-body {
+    background-color: #fff;
+  }
+
   // sorts on press and monograph pages
   #sort-dropdown .dropdown-toggle,
   #per_page-dropdown .dropdown-toggle {
@@ -1126,9 +1130,9 @@ $maize-black-80: #342f2e;
       text-transform: uppercase;
       letter-spacing: unset;
       font-size: 2.3em;
-      -o-transition: .3s; 
-        -ms-transition: .3s; 
-        -moz-transition: .3s; 
+      -o-transition: .3s;
+        -ms-transition: .3s;
+        -moz-transition: .3s;
         -webkit-transition: .3s;
         transition: .3s;
     }
@@ -1315,7 +1319,7 @@ $maize-black-80: #342f2e;
         font-weight: 500;
         text-transform: uppercase;
         letter-spacing: unset;
-        
+
         a.brand {
           display:none;
         }
