--- a/app/views/shared/_brand_bar.html.erb
+++ b/app/views/shared/_brand_bar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to application_name, main_app.root_path, id: 'home-link', class: 'navbar-brand' %>
+      <%= link_to application_name, main_app.root_path, id: 'home-link', class: 'navbar-brand', 'data-turbolinks': 'false' %>
     </div>
 
     <!-- search -->
