--- a/app/views/press_catalog/_thumbnail_list_monograph.html.erb
+++ b/app/views/press_catalog/_thumbnail_list_monograph.html.erb
@@ -2,8 +2,7 @@
   <div class="col-sm-3">
     <% presenter = Hyrax::MonographPresenter.new(document, current_ability) %>
     <a href="<%= polymorphic_path(url_for_document(document)) %>" >
-      <img class="img-responsive" src="<%= presenter.monograph_thumbnail(225) %>"
-           alt="Cover image for <%= presenter.representative_alt_text %>">
+      <%= raw presenter.monograph_thumbnail(225) %>
     </a>
   </div>
 <% end %>
