Markdown ignores hashtag; HTML in title

--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -1,4 +1,4 @@
-<% provide :page_title, @monograph_presenter.title %>
+<% provide :page_title, @monograph_presenter.page_title %>
 <% provide :page_class, 'search monograph' %>
 <% provide :page_header do %>
   <%# render 'shared/survey' %>
